# strava_agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  __init__.py  env.example  main.py  pyproject.toml
llm/: client.py
new_bot/: README.md  config.py
new_bot/agents/: simple_agent.py  workflow.py
new_bot/telegram_bot/: bot.py
new_bot/utils/: chat_context.py  chroma_manager.py  plotting_agent.py  token_manager.py
strava/: __init__.py  client.py
utils/: user_mapper.py
